SERVER-38054: failCommand fail point causes errors when run concurrently with other tests