jstests/core/failcommand_failpoint.js
@@ -7,11 +7,24 @@
     const testDB = db.getSiblingDB("test_failcommand");
     const adminDB = db.getSiblingDB("admin");
 
+    const getThreadName = function() {
+        let myUri = adminDB.runCommand({whatsmyuri: 1}).you;
+        return adminDB.aggregate([{$currentOp: {localOps: true}}, {$match: {client: myUri}}])
+            .toArray()[0]
+            .desc;
+    };
+
+    let threadName = getThreadName();
+
     // Test failing with a particular error code.
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: "alwaysOn",
-        data: {errorCode: ErrorCodes.NotMaster, failCommands: ["find"]}
+        data: {
+            errorCode: ErrorCodes.NotMaster,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandFailedWithCode(testDB.runCommand({find: "c"}), ErrorCodes.NotMaster);
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
@@ -20,7 +33,11 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: "alwaysOn",
-        data: {errorCode: ErrorCodes.BadValue, failCommands: ["find"]}
+        data: {
+            errorCode: ErrorCodes.BadValue,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandFailedWithCode(testDB.runCommand({find: "c"}), ErrorCodes.BadValue);
     assert.commandWorked(testDB.runCommand({isMaster: 1}));
@@ -32,7 +49,11 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: "alwaysOn",
-        data: {errorCode: ErrorCodes.BadValue, failCommands: ["find", "isMaster"]}
+        data: {
+            errorCode: ErrorCodes.BadValue,
+            failCommands: ["find", "isMaster"],
+            threadName: threadName,
+        }
     }));
     assert.commandFailedWithCode(testDB.runCommand({find: "c"}), ErrorCodes.BadValue);
     assert.commandFailedWithCode(testDB.runCommand({isMaster: 1}), ErrorCodes.BadValue);
@@ -42,7 +63,11 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {skip: 2},
-        data: {errorCode: ErrorCodes.NotMaster, failCommands: ["find"]}
+        data: {
+            errorCode: ErrorCodes.NotMaster,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({find: "c"}));
     assert.commandWorked(testDB.runCommand({find: "c"}));
@@ -53,7 +78,11 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {times: 2},
-        data: {errorCode: ErrorCodes.NotMaster, failCommands: ["find"]}
+        data: {
+            errorCode: ErrorCodes.NotMaster,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandFailedWithCode(testDB.runCommand({find: "c"}), ErrorCodes.NotMaster);
     assert.commandFailedWithCode(testDB.runCommand({find: "c"}), ErrorCodes.NotMaster);
@@ -64,7 +93,11 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {skip: 1},
-        data: {errorCode: ErrorCodes.BadValue, failCommands: ["find"]}
+        data: {
+            errorCode: ErrorCodes.BadValue,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({isMaster: 1}));
     assert.commandWorked(testDB.runCommand({buildinfo: 1}));
@@ -77,7 +110,11 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {times: 1},
-        data: {errorCode: ErrorCodes.BadValue, failCommands: ["find"]}
+        data: {
+            errorCode: ErrorCodes.BadValue,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({isMaster: 1}));
     assert.commandWorked(testDB.runCommand({buildinfo: 1}));
@@ -90,50 +127,61 @@
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: "alwaysOn",
-        data: {closeConnection: true, failCommands: ["find"]}
+        data: {
+            closeConnection: true,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.throws(() => testDB.runCommand({find: "c"}));
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
+
+    threadName = getThreadName();
 
     // Test that only commands specified in failCommands fail when closing the connection.
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: "alwaysOn",
-        data: {closeConnection: true, failCommands: ["find"]}
+        data: {
+            closeConnection: true,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({isMaster: 1}));
     assert.commandWorked(testDB.runCommand({buildinfo: 1}));
     assert.commandWorked(testDB.runCommand({ping: 1}));
     assert.throws(() => testDB.runCommand({find: "c"}));
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
+
+    threadName = getThreadName();
 
     // Test skip when closing connection.
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {skip: 2},
-        data: {closeConnection: true, failCommands: ["find"]}
+        data: {
+            closeConnection: true,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({find: "c"}));
     assert.commandWorked(testDB.runCommand({find: "c"}));
     assert.throws(() => testDB.runCommand({find: "c"}));
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
 
-    // Test times when closing connection.
-    assert.commandWorked(adminDB.runCommand({
-        configureFailPoint: "failCommand",
-        mode: {times: 2},
-        data: {closeConnection: true, failCommands: ["find"]}
-    }));
-    assert.throws(() => testDB.runCommand({find: "c"}));
-    assert.throws(() => testDB.runCommand({find: "c"}));
-    assert.commandWorked(testDB.runCommand({find: "c"}));
-    assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
+    threadName = getThreadName();
 
     // Commands not specified in failCommands are not counted for skip.
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {skip: 1},
-        data: {closeConnection: true, failCommands: ["find"]}
+        data: {
+            closeConnection: true,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({isMaster: 1}));
     assert.commandWorked(testDB.runCommand({buildinfo: 1}));
@@ -141,12 +189,18 @@
     assert.commandWorked(testDB.runCommand({find: "c"}));
     assert.throws(() => testDB.runCommand({find: "c"}));
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
+
+    threadName = getThreadName();
 
     // Commands not specified in failCommands are not counted for times.
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {times: 1},
-        data: {closeConnection: true, failCommands: ["find"]}
+        data: {
+            closeConnection: true,
+            failCommands: ["find"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(testDB.runCommand({isMaster: 1}));
     assert.commandWorked(testDB.runCommand({buildinfo: 1}));
@@ -155,11 +209,17 @@
     assert.commandWorked(testDB.runCommand({find: "c"}));
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
 
+    threadName = getThreadName();
+
     // Cannot fail on "configureFailPoint" command.
     assert.commandWorked(adminDB.runCommand({
         configureFailPoint: "failCommand",
         mode: {times: 1},
-        data: {errorCode: ErrorCodes.BadValue, failCommands: ["configureFailPoint"]}
+        data: {
+            errorCode: ErrorCodes.BadValue,
+            failCommands: ["configureFailPoint"],
+            threadName: threadName,
+        }
     }));
     assert.commandWorked(adminDB.runCommand({configureFailPoint: "failCommand", mode: "off"}));
 
@@ -170,6 +230,7 @@
         data: {
             writeConcernError: {code: 12345, errmsg: "hello"},
             failCommands: ['insert', 'find'],
+            threadName: threadName,
         }
     }));
     // Commands that don't support writeConcern don't tick counter.
@@ -195,6 +256,7 @@
         data: {
             writeConcernError: {code: 12345, errmsg: "hello"},
             failCommands: ['insert'],
+            threadName: threadName,
         }
     }));
     var res = testDB.runCommand({insert: "c", documents: [{_id: 'dup'}]});
